--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "morgan": "^1.10.1",
     "ndb": "^1.1.5",
     "nodemon": "^3.1.10"
   }
