--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is for express practice",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon server.js"
   },
   "author": "",
   "license": "ISC",
